--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-    <div class="all-content">
+<div class="all-content">
 <!-- navbar start -->
 
         <nav class="navbar navbar-expand-lg" id="navbar">
@@ -76,7 +76,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#blog">Blogs</a>
+                    <a class="nav-link" href="#blogs">Blogs</a>
                 </li>
 
                 </ul>
@@ -700,9 +700,34 @@
     <div class="container">
 
         <div class="row">
+
             <div class="col-md-4 py-3 py-md-0">
                 <div class="card">
                     <img src="./images/cafe-grande-fenetre-table-chaises_728472-653.jpg" alt="">
+                    <div class="card-body">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <h5>Admin / 5 Feb 2024</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eligendi dignissimos quos neque sapiente porro quas. Tempora ad rerum nostrum!</p>
+                        <button id="blog-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card">
+                    <img src="./images/kj-coffee-shop-es-un.jpg" alt="">
+                    <div class="card-body">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <h5>Admin / 5 Feb 2024</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eligendi dignissimos quos neque sapiente porro quas. Tempora ad rerum nostrum!</p>
+                        <button id="blog-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card">
+                    <img src="./images/istockphoto-1395507586-612x612.jpg" alt="">
                     <div class="card-body">
                         <h3>Lorem, ipsum dolor.</h3>
                         <h5>Admin / 5 Feb 2024</h5>
@@ -717,7 +742,40 @@
 </section>
 
 <!-- blog end -->
-    </div>
+
+
+
+<!-- footer start -->
+    <footer id="footer">
+        <div class="footer-logo text-center">
+            <img src="./images/logo.png" alt="">
+        </div>
+        <div class="social-links text-center">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-pinterest-p"></i>
+        </div>
+        
+        <div class="credits text-center">
+            Designed By <a href="#"> <span> D Coding </span> </a>
+        </div>
+
+        <div class="copyright text-center">
+            &copy; Copyright <strong> <span> Shop</span> </strong>. All Rights Reserved
+        </div>
+    </footer>
+
+<!-- footer end -->
+
+<a href="#" class="arrow">
+    <i>
+        <img src="./images/up-arrow.png" alt="" width="50px" >
+    </i>
+</a>
+
+</div>
 
 </body>
 
